Fixed text wrapping

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -95,6 +95,7 @@ h1, h2, h3, h4, h5, h6 {
   background-color: #fff;
   margin: 0 35px 30px 0;
   text-align: left;
+  width: 147px;
 }
 
 .game-space img {
